--- a/src/styles/components/Overview.css
+++ b/src/styles/components/Overview.css
@@ -41,7 +41,7 @@
 .overview-intro {
   position: relative;
   z-index: 1;
-  max-width: 680px;
+  max-width: 880px;
   margin: 0 auto 72px;
   text-align: center;
 }
